# Genetic_algorithms

./: CMakeLists.txt  Game.cpp  Game.h  Predator.cpp  Predator.h  README.md  bio.cpp  bio.h  main.cpp
